--- a/Setup/Source Repo Providers/Krishna.yaml
+++ b/Setup/Source Repo Providers/Krishna.yaml
@@ -1,5 +1,6 @@
 harnessApiVersion: '1.0'
 type: GIT
+branch: main
 keyAuth: false
 password: safeharness:qrwIfTQGQom3rm2oi2kOxA
 url: https://github.com/krgkanth/HelloWorld
