Harness IO Git Sync. MODIFY: Setup/Cloud Providers/KubernetesCluster.yaml

--- a/Setup/Cloud Providers/KubernetesCluster.yaml
+++ b/Setup/Cloud Providers/KubernetesCluster.yaml
@@ -1,6 +1,7 @@
 harnessApiVersion: '1.0'
 type: KUBERNETES_CLUSTER
 delegateSelectors:
+- ravidelegate
 - hardeepreetis-imac.local
 skipValidation: true
 usageRestrictions:
