Harness IO Git Sync. MODIFY: Setup/Cloud Providers/KubernetesCluster.yaml

--- a/Setup/Cloud Providers/KubernetesCluster.yaml
+++ b/Setup/Cloud Providers/KubernetesCluster.yaml
@@ -20,4 +20,11 @@ usageRestrictions:
     envFilter:
       filterTypes:
       - PROD
+  - appFilter:
+      entityNames:
+      - nalini chowala
+      filterType: SELECTED
+    envFilter:
+      filterTypes:
+      - NON_PROD
 useKubernetesDelegate: true
